changes to notebook

--- a/googlemaps_web_scraper/googlemaps_web_scraper.ipynb
+++ b/googlemaps_web_scraper/googlemaps_web_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = '/Users/keriwheatley/Desktop/cities.csv'\n",
+    "file = '/Users/keriwheatley/Desktop/random_code/googlemaps_web_scraper/cities.csv'\n",
     "cities = pd.read_csv(file, encoding = \"ISO-8859-1\")\n",
+    "keyword = 'metrology'\n",
     "\n",
-    "api_key = ''"
+    "api_key = 'AIzaSyDTe9-m8CQ_YdgFX7bpVFaDI-e7iDXrhKY'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cities = cities[cities['CITY'] != 'New York New York']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start: 2019-02-16 08:35:40.563348\n",
+      "Start: 2019-04-29 13:33:53.378199\n",
       "New York New York\n",
       "Los Angeles California\n",
       "Chicago Illinois\n",
@@ -472,7 +482,13 @@
       "Plymouth Minnesota\n",
       "Taylor Michigan\n",
       "Bryan Texas\n",
-      "Palatine Illinois\n",
+      "Palatine Illinois\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Springfield OH Ohio\n",
       "Lynchburg Virginia\n",
       "Waukesha Wisconsin\n",
@@ -598,63 +614,18 @@
       "La Mesa California\n",
       "Kennewick Washington\n",
       "Chicopee Massachusetts\n",
-      "Santa Cruz California\n",
-      "Petaluma California\n",
-      "Temple Texas\n",
-      "McKinney Texas\n",
-      "National California\n",
-      "Apple Valley California\n",
-      "Midwest Oklahoma\n",
-      "Owensboro Kentucky\n",
-      "Berwyn Illinois\n",
-      "Decatur AL Alabama\n",
-      "Margate Florida\n",
-      "Rosemead California\n",
-      "Charleston WV West Virginia\n",
-      "Battle Creek Michigan\n",
-      "Monroe Louisiana\n",
-      "White Plains New York\n",
-      "Arcadia California\n",
-      "Shoreline Washington\n",
-      "Cheyenne Wyoming\n",
-      "Santee California\n",
-      "Missouri Texas\n",
-      "Flagstaff Arizona\n",
-      "Springfield OR Oregon\n",
-      "Frederick Maryland\n",
-      "Euclid Ohio\n",
-      "Sarasota Florida\n",
-      "Gaithersburg Maryland\n",
-      "Oak Park Illinois\n",
-      "Carson NV Nevada\n",
-      "West Haven Connecticut\n",
-      "Bend Oregon\n",
-      "Folsom California\n",
-      "Elkhart Indiana\n",
-      "Nampa Idaho\n",
-      "La Crosse Wisconsin\n",
-      "Rio Rancho New Mexico\n",
-      "Middletown Ohio\n",
-      "Cerritos California\n",
-      "Huntington West Virginia\n",
-      "Pocatello Idaho\n",
-      "St. Peters Missouri\n",
-      "Minnetonka Minnesota\n",
-      "Orland Park Illinois\n",
-      "Sheboygan Wisconsin\n",
-      "Ames Iowa\n",
-      "Idaho Falls Idaho\n",
-      "Flower Mound Texas\n",
-      "Biloxi Mississippi\n",
-      "Loveland Colorado\n",
-      "Milford Connecticut\n",
-      "Cupertino California\n",
-      "Florissant Missouri\n",
-      "Maple Grove Minnesota\n",
-      "Mentor Ohio\n",
-      "Bowie Maryland\n",
-      "Renton Washington\n",
-      "End: 2019-02-16 09:35:52.515342\n"
+      "Santa Cruz California\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'rating'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-bec86c570bcc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mformatted_address\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'formatted_address'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mrating\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'rating'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0muser_ratings_total\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'user_ratings_total'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'types'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'rating'"
      ]
     }
    ],
@@ -663,7 +634,7 @@
     "print('Start:',datetime.now())\n",
     "for index, city in cities.iterrows():\n",
     "    print(city['CITY'])\n",
-    "    query='autism treatment in '+city['CITY']\n",
+    "    query=keyword+' in '+city['CITY']\n",
     "    url = \"https://maps.googleapis.com/maps/api/place/textsearch/json?\"\n",
     "    time.sleep(5)\n",
     "    r = requests.get(url + '&query=' + query +\n",
@@ -686,17 +657,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data.to_csv('data.csv')\n",
+    "# data.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data.to_csv(keyword.replace(' ','_')+'data.csv')\n",
     "# data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,24 +685,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start: 2019-02-16 09:58:40.761317\n",
-      "End: 2019-02-16 10:01:13.113185\n"
+      "Start: 2019-04-29 18:55:17.270550\n",
+      "End: 2019-04-29 18:56:59.565032\n"
      ]
     }
    ],
    "source": [
-    "# list_places = data['place_id']\n",
+    "list_places = data['place_id']\n",
     "# list_places = ['ChIJp9LTWDWej4ARrh0N-FMPgso']\n",
-    "list_places = data[~data['place_id'].isin(data2['place_id'])]['place_id']\n",
+    "# list_places = data[~data['place_id'].isin(data2['place_id'])]['place_id']\n",
     "\n",
-    "# data2 = pd.DataFrame(columns=['place_id','formatted_phone_number','website','opening_hours','name','adr_address'])\n",
+    "data2 = pd.DataFrame(columns=['place_id','formatted_phone_number','website','opening_hours','name','adr_address'])\n",
     "\n",
     "print('Start:',datetime.now())\n",
     "for place_id in list_places:\n",
@@ -764,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,16 +756,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2.to_csv('data2.csv')"
+    "data2.to_csv(keyword.replace(' ','_')+'data2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,20 +785,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
+    "for column in final_data.columns:\n",
+    "    final_data[column] = final_data[column].astype(str)\n",
     "final_data = final_data.drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_data.to_csv('places_list.csv', index=False)"
+    "final_data.to_csv(keyword.replace(' ','_')+'places_list.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "place_id                  381\n",
+       "name                      381\n",
+       "formatted_address         381\n",
+       "rating                    381\n",
+       "user_ratings_total        381\n",
+       "types                     381\n",
+       "geometry                  381\n",
+       "formatted_phone_number    381\n",
+       "website                   381\n",
+       "opening_hours             381\n",
+       "adr_address               381\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data.count()"
    ]
   },
   {
